lilv (0.24.25) unstable; urgency=medium

  * Add lint option with project metadata and code quality tests
  * Clean up and isolate platform-specific code
  * Fix C++ test build on MacOS
  * Fix library current_version on MacOS
  * Fix test suite when TMPDIR has no trailing slash
  * Fully separate library code from programs
  * Improve const correctness
  * Replace more platform-specific code with use of zix

 -- David Robillard <d@drobilla.net>  Wed, 11 Dec 2024 19:33:58 +0000

lilv (0.24.24) stable; urgency=medium

  * Avoid overriding state features passed by the host
  * Fix null dereference when trying to load state from a missing file
  * Fix potential null dereferences and conversion warnings

 -- David Robillard <d@drobilla.net>  Tue, 23 Jan 2024 19:39:29 +0000

lilv (0.24.22) stable; urgency=medium

  * Allow LILV_API to be defined by the user
  * Clean up code
  * Clean up inconsistent tool command line interfaces
  * Convert man pages to mdoc
  * Fix crash when plugins pass NULL to the LV2_State_Retrieve_Function
  * Fix dependencies in pkg-config file
  * Fix potential crash when writing state files fails
  * Order plugin classes by URI
  * Override pkg-config dependency within meson
  * Remove junk files from documentation install
  * Replace duplicated dox_to_sphinx script with sphinxygen dependency
  * Switch to external zix dependency

 -- David Robillard <d@drobilla.net>  Sun, 22 Oct 2023 20:14:02 +0000

lilv (0.24.20) stable; urgency=medium

  * Adopt REUSE machine-readable licensing standard
  * Update project metadata

 -- David Robillard <d@drobilla.net>  Fri, 09 Sep 2022 17:28:30 +0000

lilv (0.24.18) stable; urgency=medium

  * Allow programs to be used from subproject
  * Fix default LV2_PATH

 -- David Robillard <d@drobilla.net>  Fri, 12 Aug 2022 22:15:29 +0000

lilv (0.24.16) stable; urgency=medium

  * Fix fallback flock() detection on MacOS
  * Switch to meson build system
